# CT-DS-ADC_generator

./: .gitignore  README.md  Telescopic_Amplifier_Design.ipynb  adc.py  characterize_technology.py  database.npy  database_nch_lvt.npy  database_pch_lvt.npy  database_query.py  pyproject.toml  sitepdks.py  strongarm.py  telescopic_cascode_diffamp_generator.py  test.py
.devcontainer/: Dockerfile  devcontainer.json
adc/: __init__.py  database_query.py  strongarm.py  telescopic_cascode_diffamp_generator.py  test_strongarm.py  testutils.py
adc/telescopic_cascode_diffamp_generator/: __init__.py  dbstuff.py  shared.py  stage1.py  stage2.py  twostage.py
adc/tests/: test_adc.py  test_common_source.py
data/: database_nch.npy  database_pch.npy  database_pch_lvt.npy  readme.md  tx_char_w=0p5.npy
scratch/: bsim4v5.out  netlist.raw  netlist.sp
scripts/: characterize_technology.py  codespace-install.sh
